Created styles.css & main.js

--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <title>Images to PDF</title>
 
     <!--Import css files-->
-    <link rel="stylesheet" href="css/icon.css">
+    <link type="text/css" rel="stylesheet" href="css/icon.css">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <!-- Header for sidebar and modal -->
+    <header></header>
+
+    <!-- Main section for page content -->
+    <main></main>
     
     <!--Import js files-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
